Add playing cards library

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: blackjack
-description: A new Flutter project.
+description: Simple Blackjack game.
 
 version: 1.0.0+1
 
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  playing_cards: 0.3.1+9
 
 dev_dependencies:
   flutter_test:
